# zinobe

./: .coveragerc  README.md  pyproject.toml
app/: conftest.py
app/config/: PARAMETERS.py
app/src/core/domain/: country.py
app/src/core/util/: __init__.py  data_structure.py  encrypt.py  rest_countries.py
app/src/core/views/: __init__.py  countries_view.py
app/src/schema/: schema.py
app/src/schema/schemas/: __init__.py  base_schema.py  sqlite_schema.py
app/src/scripts/: main.py
app/src/util/: __init__.py  data_structure.py  encrypt.py
app/tests/: __init__.py  test_schema.py
app/tests/test_core/test_domain/: test_country.py
app/tests/test_util/: test_data_structure.py  test_encrypt.py
