[tool.poetry]
name = "zinobe"
version = "0.1.0"
description = ""
authors = ["denis <deniseduardoisidrogonzalez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
python-restcountries = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
